PCA for dimensionality reductions works. Data dictionary is updated.

--- a/DataPreProcessing/data_dictionary.yml
+++ b/DataPreProcessing/data_dictionary.yml
@@ -47,3 +47,51 @@ start_features:
   eng: "Engine Type/ID"
   exid:
   tr: "Time the flow was received by the collector"
+
+ending features:
+  ts_month: "Start Time month", "categorical"
+  ts_day: "Start Time day", "categorical"
+  ts_hours: "Start Time hours", "categorical"
+  ts_minutes: "Start Time minute", "categorical"
+  ts_seconds: "Start Time second", "categorical"
+  ts_microseconds: "Start Time microsecond", "numerical"
+  te_month: "End Time month", "categorical"
+  te_day: "End Time day", "categorical"
+  te_hours: "End Time hours", "categorical"
+  te_minutes: "End Time minute", "categorical"
+  te_seconds: "End Time second", "categorical"
+  te_microseconds: "End Time microsecond", "numerical"
+  tr_month: "Receiving Time month", "categorical"
+  tr_day: "Receiving Time day", "categorical"
+  tr_hours: "Receiving Time hours", "categorical"
+  tr_minutes: "Receiving Time minute", "categorical"
+  tr_seconds: "Receiving Time second", "categorical"
+  tr_microseconds: "Receiving Time microsecond", "numerical"
+  sa1: "Source IP address first byte", "categorical"
+  sa2: "Source IP address second byte", "categorical"
+  sa3: "Source IP address third byte", "categorical"
+  sa4: "Source IP address fourth byte", "categorical"
+  da1: "Destination IP address first byte", "categorical"
+  da2: "Destination IP address second byte", "categorical"
+  da3: "Destination IP address third byte", "categorical"
+  da4: "Destination IP address fourth byte", "categorical"
+  sp: "Source Port", "categorical"
+  dp: "Destination Port", "categorical"
+  pr: "Protocol TCP/UDP", "categorical"
+  flg_ACK: "flag ACK is on", "categorical"
+  flg_PSH: "flag PSH is on", "categorical"
+  flg_RST: "flag RST is on", "categorical"
+  flg_SYN: "flag SYN is on", "categorical"
+  flg_FIN: "flag FIN is on", "categorical"
+  fwd: "Forwarding status", "categorical"
+  sp_is_privileged: "If the source port is privileged", "categorical"
+  dp_is_privileged: "If the destination port is privileged", "categorical"
+  stos: "Source Type Of Service", "categorical"
+  dtos: "Destination Type Of Service", "categorical"
+  ipkt: "Output packets", "numerical"
+  ibyt: "Output bytes", "numerical"
+  opkt: "Output packets", "numerical"
+  obyt: "Output bytes", "numerical"
+  sas: "Source Autonomous System", "categorical"
+  das: "Destination Autonomous System", "categorical"
+  dir: "Direction", "categorical"
